Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 4.5.0, 4.8.6, 5.4.0 RC
-
Fix Version/s: 5.6.0
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Commits:c5e972eb87c5dbdbc0fc2ff15759ff0adaea8dfa
Description
in QFileDialog.cpp:
function itemViewKeyboardEvent(QKeyEvent *event) we can see:
case Qt::Key_Escape:
q->hide();
return true;
this code not call reject() function, and signal rejected not called.
and maybe in many places where dialog hides - reject() should be called.